--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,12 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body class='<%= controller.controller_name %>'>
+<body class="<%= controller.controller_name %>">
   <div id="banner">
     <%= image_tag("logo.png") %>
     <%= @page_title || "ANIMALS FOR SALE" %>
   </div>
+  <div id="columns">
   <div id="side">
     <ul>
       <li><a href="">Home</a></li>
@@ -22,6 +23,7 @@
   <div id="main">
 
 <%= yield %>
+
 </div>
 </div>
 </body>
